--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pillow = "^10.1.0"
 numpy = "^1.26.2"
 scipy = "^1.11.4"
 tqdm = "^4.66.1"
+torch-geometric = "^2.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
