--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ parse = "^1.19.1"
 transformers = "^4.35.2"
 loguru = "^0.7.2"
 sentence-transformers = "^2.2.2"
+pytorch-lightning = "^2.1.2"
+hydra-core = "^1.3.2"
+rich = "^13.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
